Updated first set of HTTP client tests.

--- a/http/test/client/v2/CMakeLists.txt
+++ b/http/test/client/v2/CMakeLists.txt
@@ -4,7 +4,11 @@
 # http://www.boost.org/LICENSE_1_0.txt)
 
 set(CPP-NETLIB_CLIENT_TESTS
+  response_test
   client_options_test
+  request_options_test
+  byte_source_test
+  request_test
   )
 
 foreach(test ${CPP-NETLIB_CLIENT_TESTS})
@@ -15,6 +19,7 @@ foreach(test ${CPP-NETLIB_CLIENT_TESTS})
 
   add_executable(cpp-netlib-http-v2-${test} ${test}.cpp)
   target_link_libraries(cpp-netlib-http-v2-${test}
+    cppnetlib-uri
     ${Boost_LIBRARIES}
     ${GTEST_BOTH_LIBRARIES}
     ${ICU_LIBRARIES} ${ICU_I18N_LIBRARIES}
