Added a message_base class.

--- a/http/test/CMakeLists.txt
+++ b/http/test/CMakeLists.txt
@@ -5,6 +5,7 @@
 # http://www.boost.org/LICENSE_1_0.txt)
 
 include_directories(
+  ${CPP-NETLIB_SOURCE_DIR}/config/src
   ${CPP-NETLIB_SOURCE_DIR}/uri/src
   ${CPP-NETLIB_SOURCE_DIR}/message/src
   ${CPP-NETLIB_SOURCE_DIR}/logging/src
