--- a/http/src/CMakeLists.txt
+++ b/http/src/CMakeLists.txt
@@ -8,6 +8,7 @@
 
 
 include_directories(
+  ${CPP-NETLIB_SOURCE_DIR}/config/src
   ${CPP-NETLIB_SOURCE_DIR}/uri/src
   ${CPP-NETLIB_SOURCE_DIR}/message/src
   ${CPP-NETLIB_SOURCE_DIR}/logging/src
