Added HTTP constants for client 1.0.x.

--- a/http/src/CMakeLists.txt
+++ b/http/src/CMakeLists.txt
@@ -93,9 +93,21 @@ if(NOT CPP-NETLIB_BUILD_SINGLE_LIB)
     )
 endif()
 
+set(CPP-NETLIB_HTTP_CLIENT-V2_SRCS
+  ${CMAKE_CURRENT_SOURCE_DIR}/http/v2/constants.cpp)
+add_library(network-http-client-v2 ${CPP-NETLIB_HTTP_CLIENT-V2_SRCS})
+add_dependencies(network-http-client-v2
+  cppnetlib-uri
+  )
+target_link_libraries(network-http-client-v2
+  ${Boost_LIBRARIES}
+  cppnetlib-uri
+  )
+
 # propagate sources to parent directory for one-lib-build
 set(CPP-NETLIB_HTTP_MESSAGE_SRCS ${CPP-NETLIB_HTTP_MESSAGE_SRCS} PARENT_SCOPE)
 set(CPP-NETLIB_HTTP_MESSAGE_WRAPPERS_SRCS ${CPP-NETLIB_HTTP_MESSAGE_WRAPPERS_SRCS} PARENT_SCOPE)
 set(CPP-NETLIB_HTTP_CLIENT_CONNECTIONS_SRCS ${CPP-NETLIB_HTTP_CLIENT_CONNECTIONS_SRCS} PARENT_SCOPE)
 set(CPP-NETLIB_HTTP_CLIENT_SRCS ${CPP-NETLIB_HTTP_CLIENT_SRCS} PARENT_SCOPE)
 set(CPP-NETLIB_CONSTANTS_SRCS ${CPP-NETLIB_CONSTANTS_SRCS} PARENT_SCOPE)
+set(CPP-NETLIB_HTTP_CLIENT-V2_SRCS ${CPP-NETLIB_HTTP_CLIENT-V2_SRCS} PARENT SCOPE)
