--- a/http/test/v2/CMakeLists.txt
+++ b/http/test/v2/CMakeLists.txt
@@ -4,6 +4,7 @@
 # http://www.boost.org/LICENSE_1_0.txt)
 
 set(CPP-NETLIB_CLIENT_TESTS
+  constants_test
   url_test
   )
 
@@ -16,6 +17,7 @@ foreach(test ${CPP-NETLIB_CLIENT_TESTS})
   add_executable(cpp-netlib-http-v2-${test} ${test}.cpp)
   target_link_libraries(cpp-netlib-http-v2-${test}
     cppnetlib-uri
+    network-http-client-v2
     ${Boost_LIBRARIES}
     ${GTEST_BOTH_LIBRARIES}
     ${ICU_LIBRARIES} ${ICU_I18N_LIBRARIES}
